# IthacaCore

./: .gitignore  .gitmodules  202509071840.txt  202509072115.txt  202509072152.txt  202509072241.txt  202509080143.txt  202509082017.txt  202509082052.txt  202509090455.txt  202509091649.txt  202509091858.txt  202509092142.txt  202509092152.txt  202509100556.txt  202509111546.txt  202509121937.txt  202509122006.txt  202509122135.txt  202509122335.txt  CMakeLists.txt  Grab-Files.ps1  IthacaConfig.h  IthacaCore202509062237.txt  IthacaCore202509062313.txt  IthacaCore202509070000.txt  IthacaCore202509070759.txt  IthacaCore202509070903.txt  README.md  main.c  main.cpp
.claude/: settings.local.json
dsp/: dsp_chain.cpp  dsp_chain.h  dsp_effect.h
dsp/bbe/: bbe_processor.cpp  bbe_processor.h  biquad_filter.h  harmonic_enhancer.cpp
dsp/limiter/: limiter.cpp  limiter.h
sampler/: core_logger.cpp  core_logger.h  instrument_loader.cpp  instrument_loader.h  lfopan.cpp  lfopan.h  pan.cpp  pan.h  sample_rate_converter.cpp  sample_rate_converter.h  sampler.cpp  sampler.h  sampler_io.cpp  sampler_io.h  sine_wave_generator.cpp  sine_wave_generator.h  voice.cpp  voice.h  voice_manager.cpp  voice_manager.h  voice_manager_tests.cpp  voice_processing.cpp  wav_file_exporter.cpp  wav_file_exporter.h
sampler/dsp/: bbe_processor.cpp  bbe_processor.h  biquad_filter.cpp  biquad_filter.h  harmonic_enhancer.h  ladder_filter.h  simple_limiter.h
sampler/envelopes/: ENVELOPE.md  envelope.cpp  envelope.h  envelope_static_data.cpp  envelope_static_data.h
sampler/tests/: README.md  edge_case_test.cpp  edge_case_test.h  envelope_test.cpp  envelope_test.h  master_gain_test.cpp  master_gain_test.h  performance_test.cpp  performance_test.h  polyphony_test.cpp  polyphony_test.h  single_note_test.cpp  single_note_test.h  test_base.cpp  test_base.h  test_common.h  test_helpers.cpp  test_helpers.h  test_mixer.cpp  test_mixer.h  test_registry.cpp  test_registry.h  tests.cpp  tests.h  velocity_gain_test.cpp  velocity_gain_test.h  voice_manager_tests.cpp
sampler/tests/original-working-tests/: voice_manager_tests.cpp  voice_manager_tests.h
